--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,8 +11,9 @@ package-mode = false
 
 [tool.poetry.dependencies]
 python = ">=3.10.7,<3.14"
-fastapi = "^0.68.0"
-uvicorn = "^0.15.0"
+uvicorn = "^0.29.0"
+fastapi = "^0.96.0"
+prometheus-fastapi-instrumentator = "^3.0.0"  # Совместимая с fastapi=0.96.0
 requests = "^2.32.4"
 pytest = "^8.4.1"
 
