--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,6 +16,9 @@ fastapi = "^0.96.0"
 prometheus-fastapi-instrumentator = "^3.0.0"  # Совместимая с fastapi=0.96.0
 requests = "^2.32.4"
 pytest = "^8.4.1"
+redis = "^6.2.0"
+aioredis = "^2.0.1"
+fastapi-cache2 = "^0.2.2"
 
 [tool.poetry.group.dev.dependencies]
 pytest = "^8.4.1"
