--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -26,22 +26,22 @@ services:
       timeout: 10s
       retries: 5
 
-  redis-sentinel:
-    image: redis:latest
-    container_name: redis-sentinel
-    ports:
-      - "26379:26379"
-    volumes:
-      - ./redis-conf/sentinel.conf:/etc/redis/sentinel.conf
-      - ./scripts/start-sentinel.sh:/start-sentinel.sh
-      - ./scripts/resolv.conf:/etc/resolv.conf
-      - redis-sentinel-data:/data
-    command: ["/start-sentinel.sh"]
-    networks:
-      - fastapi-network
-    depends_on:
-      redis:
-        condition: service_healthy
+  # redis-sentinel:
+  #   image: redis:latest
+  #   container_name: redis-sentinel
+  #   ports:
+  #     - "26379:26379"
+  #   volumes:
+  #     - ./redis-conf/sentinel.conf:/etc/redis/sentinel.conf
+  #     - ./scripts/start-sentinel.sh:/start-sentinel.sh
+  #     - ./scripts/resolv.conf:/etc/resolv.conf
+  #     - redis-sentinel-data:/data
+  #   command: ["/start-sentinel.sh"]
+  #   networks:
+  #     - fastapi-network
+  #   depends_on:
+  #     redis:
+  #       condition: service_healthy
 
   prometheus:
     image: prom/prometheus:latest
